--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@ body{
     margin: 0;
     padding: 0;
 }
-#cabecera
+header
 {
     background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.75);
@@ -17,13 +17,13 @@ body{
     padding: 0.5em;
 }
 
-#cabecera #logo
+header #logo
 {
     width: 80px;
     vertical-align: middle;
 }
 
-#cabecera #tagline 
+header #tagline 
 {
     padding: 0 0 0 1em;
     font-size: normal;
@@ -32,26 +32,29 @@ body{
 
 #container
 {
-    width: 70%;
-    padding: 0;
+    width: 100%;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
 }
 
 #container h1
 {
     font-size: 20px;
-
 }
 
-#post
+section, article, aside
 {
     background: white;
-    padding: 1em;
+    flex-grow: 1;
+    flex-basis: 100%;
+    padding: 10px;
 }
 
-#footer
+footer
 {
     background: #777;
     color: white;
